--- a/pw2/pw2_outliers.ipynb
+++ b/pw2/pw2_outliers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 232,
    "id": "db3efa9c-c735-4897-860d-c30291d62705",
    "metadata": {},
    "outputs": [],
@@ -16,62 +16,194 @@
     "# Convert to DataFrame\n",
     "df_aloi = pd.DataFrame(data_aloi)\n",
     "df_glass = pd.DataFrame(data_glass)\n",
-    "df_ionos= pd.DataFrame(data_ionos)\n"
+    "df_ionos = pd.DataFrame(data_ionos)\n",
+    "# ALOI 49534 objects, 1508 outliers (3.04%) ALOI"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "977a46da-daea-4a0e-9f6a-f5e0495af4d8",
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 233,
+   "id": "1217bb48-e2d0-4498-b595-5fd76c7d6c4a",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "y_aloi = df_aloi.copy()\n",
-    "y_aloi = y_aloi['outlier']\n",
-    "df_aloi = df_aloi.drop(columns='outlier')\n"
+    "# préparation du dataset et des label\n",
+    "# suppression des label et nettoyage des labels avec 1 et 0\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "\n",
+    "def prepare_dataset(df, col_name):\n",
+    "    y_aloi = df.copy()\n",
+    "    # Supprimer la colonne 'outlier' du DataFrame\n",
+    "    df_aloi = df.drop(columns=col_name)\n",
+    "    label_encoder = LabelEncoder()\n",
+    "    y_aloi[col_name] = label_encoder.fit_transform(y_aloi[col_name])\n",
+    "    return df_aloi, y_aloi"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 234,
+   "id": "8a77aa92-1d22-4981-9028-311636713ec8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# calculs des outliers avec LOF selon les paramètes\n",
+    "# return un tableau des outliers detectés\n",
+    "from sklearn.neighbors import LocalOutlierFactor\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "def compute_outliers_LOF(df, n_neig, cont): \n",
+    "    lof_model = LocalOutlierFactor(n_neighbors=n_neig, contamination=cont)\n",
+    "    outlier_scores = lof_model.fit_predict(df)\n",
+    "    # -1 outlier et 1 inlier\n",
+    "    # convertion en 1 outlier et 0 inlier\n",
+    "    outliers_detected = outlier_scores == -1\n",
+    "    return outliers_detected.astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 235,
    "id": "a4f96595-93da-4f88-b399-4026d0f69885",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# application de LOF\n",
+    "from sklearn.metrics import f1_score\n",
+    "from sklearn.model_selection import ParameterGrid\n",
+    "def run_search_best_params(df, y, label_col):    \n",
+    "    # Paramètres à tester\n",
+    "    param_grid = {\n",
+    "        'n_neighbors': [3, 5, 10],\n",
+    "        'contamination': [0.01, 0.05, 0.1]\n",
+    "    }\n",
+    "    \n",
+    "    # Meilleurs résultats initiaux\n",
+    "    meilleur_f1 = 0\n",
+    "    meilleurs_params = None\n",
+    "    \n",
+    "    # Boucle sur les combinaisons de paramètres\n",
+    "    for params in ParameterGrid(param_grid):\n",
+    "        outliers_detected = compute_outliers_LOF(df, params['n_neighbors'], params['contamination'])\n",
+    "        \n",
+    "        f1 = f1_score(y[label_col], outliers_detected)\n",
+    "        accuracy = sum(outliers_detected == y[label_col]) / len(y[label_col])\n",
+    "        \n",
+    "        print(f\"Paramètres : {params}\")\n",
+    "        print(f\"Précision : {accuracy * 100:.2f}%\")\n",
+    "        print(f\"F1 score : {f1:.2f}\")\n",
+    "        print(\"----------------------\")\n",
+    "        \n",
+    "        # Mettre à jour les meilleurs paramètres si nécessaire\n",
+    "        if f1 > meilleur_f1:\n",
+    "            meilleur_f1 = f1\n",
+    "            meilleurs_params = params\n",
+    "    \n",
+    "    print(\"Meilleurs paramètres:\")\n",
+    "    print(meilleurs_params)\n",
+    "    print(\"Meilleur F1 score : {:.2f}\".format(meilleur_f1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d7009ba-597b-4228-b7d7-3fd25e6107f8",
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "unexpected indent (4127019315.py, line 12)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[31], line 12\u001b[1;36m\u001b[0m\n\u001b[1;33m    lof_model = LocalOutlierFactor(n_neighbors=k, contamination=j)\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m unexpected indent\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Paramètres : {'contamination': 0.01, 'n_neighbors': 3}\n",
+      "Précision : 96.70%\n",
+      "F1 score : 0.18\n",
+      "----------------------\n",
+      "Paramètres : {'contamination': 0.01, 'n_neighbors': 5}\n",
+      "Précision : 96.73%\n",
+      "F1 score : 0.19\n",
+      "----------------------\n",
+      "Paramètres : {'contamination': 0.01, 'n_neighbors': 10}\n",
+      "Précision : 95.98%\n",
+      "F1 score : 0.01\n",
+      "----------------------\n",
+      "Paramètres : {'contamination': 0.05, 'n_neighbors': 3}\n",
+      "Précision : 93.80%\n",
+      "F1 score : 0.23\n",
+      "----------------------\n",
+      "Paramètres : {'contamination': 0.05, 'n_neighbors': 5}\n",
+      "Précision : 94.01%\n",
+      "F1 score : 0.26\n",
+      "----------------------\n",
+      "Paramètres : {'contamination': 0.05, 'n_neighbors': 10}\n",
+      "Précision : 91.98%\n",
+      "F1 score : 0.00\n",
+      "----------------------\n",
+      "Paramètres : {'contamination': 0.1, 'n_neighbors': 3}\n",
+      "Précision : 89.34%\n",
+      "F1 score : 0.18\n",
+      "----------------------\n",
+      "Paramètres : {'contamination': 0.1, 'n_neighbors': 5}\n",
+      "Précision : 89.53%\n",
+      "F1 score : 0.20\n",
+      "----------------------\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.neighbors import LocalOutlierFactor\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
+    "# préparation du dataset\n",
+    "df_aloi, y_aloi = prepare_dataset(df_aloi, 'outlier')\n",
     "\n",
-    "\n",
-    "n_neighbors= [5, 10, 15, 20]\n",
-    "contamination= [0.01, 0.05, 0.1, 0.15]\n",
-    "n_max= 0\n",
-    "c_ma= 0\n",
-    "old_max= 0\n",
-    "#for k in n_neighbors:\n",
-    "#    for j in contamination:\n",
-    "lof_model = LocalOutlierFactor(n_neighbors=k, contamination=j)\n",
-    "df_aloi['lof_scores'] = lof_model.fit_predict(df_aloi)\n",
-    "\n",
-    "max = (df_aloi['lof_scores'] == -1).sum()\n",
-    "#        if max < old_max:\n",
-    "#            old_max = max\n",
-    "#            c_max = j\n",
-    "#            n_max = k\n",
-    "\n",
-    "print(\"conta\", c_max)\n",
-    "print(\"neighboor\", n_max)\n",
-    "print(old_max)"
+    "run_search_best_params(df_aloi, y_aloi, 'outlier')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa9be2b2-e38e-438f-b672-1dcbb989b91b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 222,
+   "id": "1783029d-69fc-467c-aaee-b2927d791a13",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "47057"
+      ]
+     },
+     "execution_count": 222,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.count_nonzero(outliers_detected == 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 223,
+   "id": "1fc76d58-3f93-4fe6-8193-06636d11a90b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "48026"
+      ]
+     },
+     "execution_count": 223,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.count_nonzero(y_aloi['outlier'] == 0)"
    ]
   }
  ],
