--- a/pw2/pw2_outliers.ipynb
+++ b/pw2/pw2_outliers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 32,
    "id": "db3efa9c-c735-4897-860d-c30291d62705",
    "metadata": {},
    "outputs": [],
@@ -16,13 +16,22 @@
     "# Convert to DataFrame\n",
     "df_aloi = pd.DataFrame(data_aloi)\n",
     "df_glass = pd.DataFrame(data_glass)\n",
-    "df_ionos = pd.DataFrame(data_ionos)\n",
-    "# ALOI 49534 objects, 1508 outliers (3.04%) ALOI"
+    "df_ionos = pd.DataFrame(data_ionos)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 2,
+   "id": "278ea1b2-12fd-496a-9f05-71732ec63e1e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO expliquer ce que représente les datasets ICI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "1217bb48-e2d0-4498-b595-5fd76c7d6c4a",
    "metadata": {},
    "outputs": [],
@@ -42,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 4,
    "id": "8a77aa92-1d22-4981-9028-311636713ec8",
    "metadata": {},
    "outputs": [],
@@ -63,34 +72,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 33,
    "id": "a4f96595-93da-4f88-b399-4026d0f69885",
    "metadata": {},
    "outputs": [],
    "source": [
     "# application de LOF\n",
     "from sklearn.metrics import f1_score\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import recall_score\n",
     "from sklearn.model_selection import ParameterGrid\n",
     "def run_search_best_params(df, y, label_col):    \n",
     "    # Paramètres à tester\n",
     "    param_grid = {\n",
     "        'n_neighbors': [3, 5, 10],\n",
-    "        'contamination': [0.01, 0.05, 0.1]\n",
+    "        'contamination': [0.005, 0.01, 0.05, 0.1]\n",
     "    }\n",
     "    \n",
     "    # Meilleurs résultats initiaux\n",
     "    meilleur_f1 = 0\n",
     "    meilleurs_params = None\n",
     "    \n",
-    "    # Boucle sur les combinaisons de paramètres\n",
+    "    # combinaisons de paramètres\n",
     "    for params in ParameterGrid(param_grid):\n",
     "        outliers_detected = compute_outliers_LOF(df, params['n_neighbors'], params['contamination'])\n",
     "        \n",
     "        f1 = f1_score(y[label_col], outliers_detected)\n",
-    "        accuracy = sum(outliers_detected == y[label_col]) / len(y[label_col])\n",
-    "        \n",
+    "        accuracy = accuracy_score(y[label_col], outliers_detected)\n",
+    "        recall = recall_score(y[label_col], outliers_detected)\n",
+    "\n",
     "        print(f\"Paramètres : {params}\")\n",
     "        print(f\"Précision : {accuracy * 100:.2f}%\")\n",
+    "        print(f\"Recall : {recall * 100:.2f}%\")\n",
     "        print(f\"F1 score : {f1:.2f}\")\n",
     "        print(\"----------------------\")\n",
     "        \n",
@@ -114,96 +127,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Paramètres : {'contamination': 0.01, 'n_neighbors': 3}\n",
-      "Précision : 96.70%\n",
-      "F1 score : 0.18\n",
-      "----------------------\n",
-      "Paramètres : {'contamination': 0.01, 'n_neighbors': 5}\n",
-      "Précision : 96.73%\n",
-      "F1 score : 0.19\n",
-      "----------------------\n",
-      "Paramètres : {'contamination': 0.01, 'n_neighbors': 10}\n",
-      "Précision : 95.98%\n",
-      "F1 score : 0.01\n",
-      "----------------------\n",
-      "Paramètres : {'contamination': 0.05, 'n_neighbors': 3}\n",
-      "Précision : 93.80%\n",
-      "F1 score : 0.23\n",
-      "----------------------\n",
-      "Paramètres : {'contamination': 0.05, 'n_neighbors': 5}\n",
-      "Précision : 94.01%\n",
-      "F1 score : 0.26\n",
-      "----------------------\n",
-      "Paramètres : {'contamination': 0.05, 'n_neighbors': 10}\n",
-      "Précision : 91.98%\n",
-      "F1 score : 0.00\n",
-      "----------------------\n",
-      "Paramètres : {'contamination': 0.1, 'n_neighbors': 3}\n",
-      "Précision : 89.34%\n",
-      "F1 score : 0.18\n",
-      "----------------------\n",
-      "Paramètres : {'contamination': 0.1, 'n_neighbors': 5}\n",
-      "Précision : 89.53%\n",
-      "F1 score : 0.20\n",
-      "----------------------\n"
+      "computing ALOI dataset...\n"
      ]
     }
    ],
    "source": [
-    "# préparation du dataset\n",
+    "# test pour dataset ALOI - ALOI 49534 objects, 1508 outliers (3.04%) ALOI\n",
+    "print(\"computing ALOI dataset...\")\n",
     "df_aloi, y_aloi = prepare_dataset(df_aloi, 'outlier')\n",
+    "run_search_best_params(df_aloi, y_aloi, 'outlier')\n",
     "\n",
-    "run_search_best_params(df_aloi, y_aloi, 'outlier')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aa9be2b2-e38e-438f-b672-1dcbb989b91b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 222,
-   "id": "1783029d-69fc-467c-aaee-b2927d791a13",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "47057"
-      ]
-     },
-     "execution_count": 222,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.count_nonzero(outliers_detected == 0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 223,
-   "id": "1fc76d58-3f93-4fe6-8193-06636d11a90b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "48026"
-      ]
-     },
-     "execution_count": 223,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.count_nonzero(y_aloi['outlier'] == 0)"
+    "# test pour dataset glass\n",
+    "# 7 attributes, 214 objects, 9 outliers (4.21%)\n",
+    "print(\"computing GLASS dataset...\")\n",
+    "df_glass, y_glass = prepare_dataset(df_glass, 'outlier')\n",
+    "run_search_best_params(df_glass, y_glass, 'outlier')\n",
+    "\n",
+    "\n",
+    "# test pour dataset Ionosphere\n",
+    "# 32 attributes, 351 objects, 126 outliers (35.90%)\n",
+    "print(\"computing IONOS dataset...\")\n",
+    "df_ionos, y_ionos = prepare_dataset(df_ionos, 'outlier')\n",
+    "run_search_best_params(df_ionos, y_ionos, 'outlier')\n"
    ]
   }
  ],
