add conclusion cell

--- a/pw2/pw2_outliers.ipynb
+++ b/pw2/pw2_outliers.ipynb
@@ -26,7 +26,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO expliquer ce que représente les datasets ICI"
+    "# TODO expliquer ce que représente les datasets ICI\n",
+    "# Le dataset ALOI contient des images d'objets sous différents conditions lumineuses\n",
+    "# Le dataset Glass contient les données de composition de verres ainsi que l'indice de réfraction\n",
+    "# Le dataset Ionos contient des données radars passant par la ionosphere"
    ]
   },
   {
@@ -119,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "8d7009ba-597b-4228-b7d7-3fd25e6107f8",
    "metadata": {},
    "outputs": [
@@ -127,12 +130,204 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "computing ALOI dataset...\n"
+      "computing ALOI dataset...\n",
+      "Paramètres : {'contamination': 0.005, 'n_neighbors': 3}\n",
+      "Précision : 96.95%\n",
+      "Recall : 8.09%\n",
+      "F1 score : 0.14\n",
+      "----------------------\n",
+      "Paramètres : {'contamination': 0.005, 'n_neighbors': 5}\n",
+      "Précision : 96.94%\n",
+      "Recall : 7.89%\n",
+      "F1 score : 0.14\n",
+      "----------------------\n",
+      "Paramètres : {'contamination': 0.005, 'n_neighbors': 10}\n",
+      "Précision : 96.48%\n",
+      "Recall : 0.40%\n",
+      "F1 score : 0.01\n",
+      "----------------------\n",
+      "Paramètres : {'contamination': 0.01, 'n_neighbors': 3}\n",
+      "Précision : 96.70%\n",
+      "Recall : 12.20%\n",
+      "F1 score : 0.18\n",
+      "----------------------\n",
+      "Paramètres : {'contamination': 0.01, 'n_neighbors': 5}\n",
+      "Précision : 96.73%\n",
+      "Recall : 12.67%\n",
+      "F1 score : 0.19\n",
+      "----------------------\n",
+      "Paramètres : {'contamination': 0.01, 'n_neighbors': 10}\n",
+      "Précision : 95.98%\n",
+      "Recall : 0.40%\n",
+      "F1 score : 0.01\n",
+      "----------------------\n",
+      "Paramètres : {'contamination': 0.05, 'n_neighbors': 3}\n",
+      "Précision : 93.80%\n",
+      "Recall : 30.24%\n",
+      "F1 score : 0.23\n",
+      "----------------------\n",
+      "Paramètres : {'contamination': 0.05, 'n_neighbors': 5}\n",
+      "Précision : 94.01%\n",
+      "Recall : 33.75%\n",
+      "F1 score : 0.26\n",
+      "----------------------\n",
+      "Paramètres : {'contamination': 0.05, 'n_neighbors': 10}\n",
+      "Précision : 91.98%\n",
+      "Recall : 0.46%\n",
+      "F1 score : 0.00\n",
+      "----------------------\n",
+      "Paramètres : {'contamination': 0.1, 'n_neighbors': 3}\n",
+      "Précision : 89.34%\n",
+      "Recall : 39.12%\n",
+      "F1 score : 0.18\n",
+      "----------------------\n",
+      "Paramètres : {'contamination': 0.1, 'n_neighbors': 5}\n",
+      "Précision : 89.53%\n",
+      "Recall : 42.37%\n",
+      "F1 score : 0.20\n",
+      "----------------------\n",
+      "Paramètres : {'contamination': 0.1, 'n_neighbors': 10}\n",
+      "Précision : 86.98%\n",
+      "Recall : 0.46%\n",
+      "F1 score : 0.00\n",
+      "----------------------\n",
+      "Meilleurs paramètres:\n",
+      "{'contamination': 0.05, 'n_neighbors': 5}\n",
+      "Meilleur F1 score : 0.26\n",
+      "computing GLASS dataset...\n",
+      "Paramètres : {'contamination': 0.005, 'n_neighbors': 3}\n",
+      "Précision : 95.79%\n",
+      "Recall : 11.11%\n",
+      "F1 score : 0.18\n",
+      "----------------------\n",
+      "Paramètres : {'contamination': 0.005, 'n_neighbors': 5}\n",
+      "Précision : 95.79%\n",
+      "Recall : 11.11%\n",
+      "F1 score : 0.18\n",
+      "----------------------\n",
+      "Paramètres : {'contamination': 0.005, 'n_neighbors': 10}\n",
+      "Précision : 95.79%\n",
+      "Recall : 11.11%\n",
+      "F1 score : 0.18\n",
+      "----------------------\n",
+      "Paramètres : {'contamination': 0.01, 'n_neighbors': 3}\n",
+      "Précision : 95.33%\n",
+      "Recall : 11.11%\n",
+      "F1 score : 0.17\n",
+      "----------------------\n",
+      "Paramètres : {'contamination': 0.01, 'n_neighbors': 5}\n",
+      "Précision : 95.79%\n",
+      "Recall : 11.11%\n",
+      "F1 score : 0.18\n",
+      "----------------------\n",
+      "Paramètres : {'contamination': 0.01, 'n_neighbors': 10}\n",
+      "Précision : 95.33%\n",
+      "Recall : 11.11%\n",
+      "F1 score : 0.17\n",
+      "----------------------\n",
+      "Paramètres : {'contamination': 0.05, 'n_neighbors': 3}\n",
+      "Précision : 91.59%\n",
+      "Recall : 11.11%\n",
+      "F1 score : 0.10\n",
+      "----------------------\n",
+      "Paramètres : {'contamination': 0.05, 'n_neighbors': 5}\n",
+      "Précision : 92.52%\n",
+      "Recall : 22.22%\n",
+      "F1 score : 0.20\n",
+      "----------------------\n",
+      "Paramètres : {'contamination': 0.05, 'n_neighbors': 10}\n",
+      "Précision : 92.52%\n",
+      "Recall : 22.22%\n",
+      "F1 score : 0.20\n",
+      "----------------------\n",
+      "Paramètres : {'contamination': 0.1, 'n_neighbors': 3}\n",
+      "Précision : 86.45%\n",
+      "Recall : 11.11%\n",
+      "F1 score : 0.06\n",
+      "----------------------\n",
+      "Paramètres : {'contamination': 0.1, 'n_neighbors': 5}\n",
+      "Précision : 87.38%\n",
+      "Recall : 22.22%\n",
+      "F1 score : 0.13\n",
+      "----------------------\n",
+      "Paramètres : {'contamination': 0.1, 'n_neighbors': 10}\n",
+      "Précision : 87.38%\n",
+      "Recall : 22.22%\n",
+      "F1 score : 0.13\n",
+      "----------------------\n",
+      "Meilleurs paramètres:\n",
+      "{'contamination': 0.05, 'n_neighbors': 5}\n",
+      "Meilleur F1 score : 0.20\n",
+      "computing IONOS dataset...\n",
+      "Paramètres : {'contamination': 0.005, 'n_neighbors': 3}\n",
+      "Précision : 64.67%\n",
+      "Recall : 1.59%\n",
+      "F1 score : 0.03\n",
+      "----------------------\n",
+      "Paramètres : {'contamination': 0.005, 'n_neighbors': 5}\n",
+      "Précision : 64.10%\n",
+      "Recall : 0.79%\n",
+      "F1 score : 0.02\n",
+      "----------------------\n",
+      "Paramètres : {'contamination': 0.005, 'n_neighbors': 10}\n",
+      "Précision : 63.53%\n",
+      "Recall : 0.00%\n",
+      "F1 score : 0.00\n",
+      "----------------------\n",
+      "Paramètres : {'contamination': 0.01, 'n_neighbors': 3}\n",
+      "Précision : 65.24%\n",
+      "Recall : 3.17%\n",
+      "F1 score : 0.06\n",
+      "----------------------\n",
+      "Paramètres : {'contamination': 0.01, 'n_neighbors': 5}\n",
+      "Précision : 63.53%\n",
+      "Recall : 0.79%\n",
+      "F1 score : 0.02\n",
+      "----------------------\n",
+      "Paramètres : {'contamination': 0.01, 'n_neighbors': 10}\n",
+      "Précision : 63.53%\n",
+      "Recall : 0.79%\n",
+      "F1 score : 0.02\n",
+      "----------------------\n",
+      "Paramètres : {'contamination': 0.05, 'n_neighbors': 3}\n",
+      "Précision : 68.66%\n",
+      "Recall : 13.49%\n",
+      "F1 score : 0.24\n",
+      "----------------------\n",
+      "Paramètres : {'contamination': 0.05, 'n_neighbors': 5}\n",
+      "Précision : 62.68%\n",
+      "Recall : 4.76%\n",
+      "F1 score : 0.08\n",
+      "----------------------\n",
+      "Paramètres : {'contamination': 0.05, 'n_neighbors': 10}\n",
+      "Précision : 61.25%\n",
+      "Recall : 3.17%\n",
+      "F1 score : 0.06\n",
+      "----------------------\n",
+      "Paramètres : {'contamination': 0.1, 'n_neighbors': 3}\n",
+      "Précision : 68.38%\n",
+      "Recall : 19.84%\n",
+      "F1 score : 0.31\n",
+      "----------------------\n",
+      "Paramètres : {'contamination': 0.1, 'n_neighbors': 5}\n",
+      "Précision : 62.11%\n",
+      "Recall : 11.11%\n",
+      "F1 score : 0.17\n",
+      "----------------------\n",
+      "Paramètres : {'contamination': 0.1, 'n_neighbors': 10}\n",
+      "Précision : 62.68%\n",
+      "Recall : 11.90%\n",
+      "F1 score : 0.19\n",
+      "----------------------\n",
+      "Meilleurs paramètres:\n",
+      "{'contamination': 0.1, 'n_neighbors': 3}\n",
+      "Meilleur F1 score : 0.31\n"
      ]
     }
    ],
    "source": [
-    "# test pour dataset ALOI - ALOI 49534 objects, 1508 outliers (3.04%) ALOI\n",
+    "# test pour dataset ALOI - \n",
+    "# ALOI 49534 objects, 1508 outliers (3.04%) ALOI\n",
     "print(\"computing ALOI dataset...\")\n",
     "df_aloi, y_aloi = prepare_dataset(df_aloi, 'outlier')\n",
     "run_search_best_params(df_aloi, y_aloi, 'outlier')\n",
@@ -149,6 +344,36 @@
     "print(\"computing IONOS dataset...\")\n",
     "df_ionos, y_ionos = prepare_dataset(df_ionos, 'outlier')\n",
     "run_search_best_params(df_ionos, y_ionos, 'outlier')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2aad6da9-8894-4b3f-a1e0-d2757976b0b2",
+   "metadata": {},
+   "source": [
+    "# aloi\n",
+    "Meilleurs paramètres:\n",
+    "- {'contamination': 0.05, 'n_neighbors': 5}\n",
+    "- Meilleur F1 score : 0.26\n",
+    "- Précision : 94.01%\n",
+    "- Recall : 33.75%\n",
+    "- Donnée du fournisseur: ALOI 49534 objects, 1508 outliers (3.04%) ALOI\n",
+    "\n",
+    "# glass\n",
+    "- Meilleurs paramètres:\n",
+    "- {'contamination': 0.05, 'n_neighbors': 5}\n",
+    "- Meilleur F1 score : 0.20\n",
+    "- Précision : 95.79%\n",
+    "- Recall : 11.11%\n",
+    "- Donnée du fournisseur: 7 attributes, 214 objects, 9 outliers (4.21%)\n",
+    "\n",
+    "# ionos\n",
+    "- Meilleurs paramètres:\n",
+    "- {'contamination': 0.1, 'n_neighbors': 3}\n",
+    "- Meilleur F1 score : 0.31\n",
+    "- Précision : 68.38%\n",
+    "- Recall : 19.84%\n",
+    "- Donnée du fournisseur: 32 attributes, 351 objects, 126 outliers (35.90%)\n"
    ]
   }
  ],
