add precision score

--- a/pw2/pw2_outliers.ipynb
+++ b/pw2/pw2_outliers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 40,
    "id": "db3efa9c-c735-4897-860d-c30291d62705",
    "metadata": {},
    "outputs": [],
@@ -17,19 +17,6 @@
     "df_aloi = pd.DataFrame(data_aloi)\n",
     "df_glass = pd.DataFrame(data_glass)\n",
     "df_ionos = pd.DataFrame(data_ionos)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "278ea1b2-12fd-496a-9f05-71732ec63e1e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO expliquer ce que représente les datasets ICI\n",
-    "# Le dataset ALOI contient des images d'objets sous différents conditions lumineuses\n",
-    "# Le dataset Glass contient les données de composition de verres ainsi que l'indice de réfraction\n",
-    "# Le dataset Ionos contient des données radars passant par la ionosphere"
    ]
   },
   {
@@ -75,14 +62,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 43,
    "id": "a4f96595-93da-4f88-b399-4026d0f69885",
    "metadata": {},
    "outputs": [],
    "source": [
     "# application de LOF\n",
     "from sklearn.metrics import f1_score\n",
-    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import precision_score\n",
     "from sklearn.metrics import recall_score\n",
     "from sklearn.model_selection import ParameterGrid\n",
     "def run_search_best_params(df, y, label_col):    \n",
@@ -101,11 +88,11 @@
     "        outliers_detected = compute_outliers_LOF(df, params['n_neighbors'], params['contamination'])\n",
     "        \n",
     "        f1 = f1_score(y[label_col], outliers_detected)\n",
-    "        accuracy = accuracy_score(y[label_col], outliers_detected)\n",
+    "        precision = precision_score(y[label_col], outliers_detected)\n",
     "        recall = recall_score(y[label_col], outliers_detected)\n",
     "\n",
     "        print(f\"Paramètres : {params}\")\n",
-    "        print(f\"Précision : {accuracy * 100:.2f}%\")\n",
+    "        print(f\"Précision : {precision * 100:.2f}%\")\n",
     "        print(f\"Recall : {recall * 100:.2f}%\")\n",
     "        print(f\"F1 score : {f1:.2f}\")\n",
     "        print(\"----------------------\")\n",
@@ -122,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 44,
    "id": "8d7009ba-597b-4228-b7d7-3fd25e6107f8",
    "metadata": {},
    "outputs": [
@@ -132,62 +119,62 @@
      "text": [
       "computing ALOI dataset...\n",
       "Paramètres : {'contamination': 0.005, 'n_neighbors': 3}\n",
-      "Précision : 96.95%\n",
+      "Précision : 49.19%\n",
       "Recall : 8.09%\n",
       "F1 score : 0.14\n",
       "----------------------\n",
       "Paramètres : {'contamination': 0.005, 'n_neighbors': 5}\n",
-      "Précision : 96.94%\n",
+      "Précision : 47.98%\n",
       "Recall : 7.89%\n",
       "F1 score : 0.14\n",
       "----------------------\n",
       "Paramètres : {'contamination': 0.005, 'n_neighbors': 10}\n",
-      "Précision : 96.48%\n",
+      "Précision : 2.42%\n",
       "Recall : 0.40%\n",
       "F1 score : 0.01\n",
       "----------------------\n",
       "Paramètres : {'contamination': 0.01, 'n_neighbors': 3}\n",
-      "Précision : 96.70%\n",
+      "Précision : 37.10%\n",
       "Recall : 12.20%\n",
       "F1 score : 0.18\n",
       "----------------------\n",
       "Paramètres : {'contamination': 0.01, 'n_neighbors': 5}\n",
-      "Précision : 96.73%\n",
+      "Précision : 38.51%\n",
       "Recall : 12.67%\n",
       "F1 score : 0.19\n",
       "----------------------\n",
       "Paramètres : {'contamination': 0.01, 'n_neighbors': 10}\n",
-      "Précision : 95.98%\n",
+      "Précision : 1.21%\n",
       "Recall : 0.40%\n",
       "F1 score : 0.01\n",
       "----------------------\n",
       "Paramètres : {'contamination': 0.05, 'n_neighbors': 3}\n",
-      "Précision : 93.80%\n",
+      "Précision : 18.41%\n",
       "Recall : 30.24%\n",
       "F1 score : 0.23\n",
       "----------------------\n",
       "Paramètres : {'contamination': 0.05, 'n_neighbors': 5}\n",
-      "Précision : 94.01%\n",
+      "Précision : 20.55%\n",
       "Recall : 33.75%\n",
       "F1 score : 0.26\n",
       "----------------------\n",
       "Paramètres : {'contamination': 0.05, 'n_neighbors': 10}\n",
-      "Précision : 91.98%\n",
+      "Précision : 0.28%\n",
       "Recall : 0.46%\n",
       "F1 score : 0.00\n",
       "----------------------\n",
       "Paramètres : {'contamination': 0.1, 'n_neighbors': 3}\n",
-      "Précision : 89.34%\n",
+      "Précision : 11.91%\n",
       "Recall : 39.12%\n",
       "F1 score : 0.18\n",
       "----------------------\n",
       "Paramètres : {'contamination': 0.1, 'n_neighbors': 5}\n",
-      "Précision : 89.53%\n",
+      "Précision : 12.90%\n",
       "Recall : 42.37%\n",
       "F1 score : 0.20\n",
       "----------------------\n",
       "Paramètres : {'contamination': 0.1, 'n_neighbors': 10}\n",
-      "Précision : 86.98%\n",
+      "Précision : 0.14%\n",
       "Recall : 0.46%\n",
       "F1 score : 0.00\n",
       "----------------------\n",
@@ -196,62 +183,62 @@
       "Meilleur F1 score : 0.26\n",
       "computing GLASS dataset...\n",
       "Paramètres : {'contamination': 0.005, 'n_neighbors': 3}\n",
-      "Précision : 95.79%\n",
+      "Précision : 50.00%\n",
       "Recall : 11.11%\n",
       "F1 score : 0.18\n",
       "----------------------\n",
       "Paramètres : {'contamination': 0.005, 'n_neighbors': 5}\n",
-      "Précision : 95.79%\n",
+      "Précision : 50.00%\n",
       "Recall : 11.11%\n",
       "F1 score : 0.18\n",
       "----------------------\n",
       "Paramètres : {'contamination': 0.005, 'n_neighbors': 10}\n",
-      "Précision : 95.79%\n",
+      "Précision : 50.00%\n",
       "Recall : 11.11%\n",
       "F1 score : 0.18\n",
       "----------------------\n",
       "Paramètres : {'contamination': 0.01, 'n_neighbors': 3}\n",
-      "Précision : 95.33%\n",
+      "Précision : 33.33%\n",
       "Recall : 11.11%\n",
       "F1 score : 0.17\n",
       "----------------------\n",
       "Paramètres : {'contamination': 0.01, 'n_neighbors': 5}\n",
-      "Précision : 95.79%\n",
+      "Précision : 50.00%\n",
       "Recall : 11.11%\n",
       "F1 score : 0.18\n",
       "----------------------\n",
       "Paramètres : {'contamination': 0.01, 'n_neighbors': 10}\n",
-      "Précision : 95.33%\n",
+      "Précision : 33.33%\n",
       "Recall : 11.11%\n",
       "F1 score : 0.17\n",
       "----------------------\n",
       "Paramètres : {'contamination': 0.05, 'n_neighbors': 3}\n",
-      "Précision : 91.59%\n",
+      "Précision : 9.09%\n",
       "Recall : 11.11%\n",
       "F1 score : 0.10\n",
       "----------------------\n",
       "Paramètres : {'contamination': 0.05, 'n_neighbors': 5}\n",
-      "Précision : 92.52%\n",
+      "Précision : 18.18%\n",
       "Recall : 22.22%\n",
       "F1 score : 0.20\n",
       "----------------------\n",
       "Paramètres : {'contamination': 0.05, 'n_neighbors': 10}\n",
-      "Précision : 92.52%\n",
+      "Précision : 18.18%\n",
       "Recall : 22.22%\n",
       "F1 score : 0.20\n",
       "----------------------\n",
       "Paramètres : {'contamination': 0.1, 'n_neighbors': 3}\n",
-      "Précision : 86.45%\n",
+      "Précision : 4.55%\n",
       "Recall : 11.11%\n",
       "F1 score : 0.06\n",
       "----------------------\n",
       "Paramètres : {'contamination': 0.1, 'n_neighbors': 5}\n",
-      "Précision : 87.38%\n",
+      "Précision : 9.09%\n",
       "Recall : 22.22%\n",
       "F1 score : 0.13\n",
       "----------------------\n",
       "Paramètres : {'contamination': 0.1, 'n_neighbors': 10}\n",
-      "Précision : 87.38%\n",
+      "Précision : 9.09%\n",
       "Recall : 22.22%\n",
       "F1 score : 0.13\n",
       "----------------------\n",
@@ -260,62 +247,62 @@
       "Meilleur F1 score : 0.20\n",
       "computing IONOS dataset...\n",
       "Paramètres : {'contamination': 0.005, 'n_neighbors': 3}\n",
-      "Précision : 64.67%\n",
+      "Précision : 100.00%\n",
       "Recall : 1.59%\n",
       "F1 score : 0.03\n",
       "----------------------\n",
       "Paramètres : {'contamination': 0.005, 'n_neighbors': 5}\n",
-      "Précision : 64.10%\n",
+      "Précision : 50.00%\n",
       "Recall : 0.79%\n",
       "F1 score : 0.02\n",
       "----------------------\n",
       "Paramètres : {'contamination': 0.005, 'n_neighbors': 10}\n",
-      "Précision : 63.53%\n",
+      "Précision : 0.00%\n",
       "Recall : 0.00%\n",
       "F1 score : 0.00\n",
       "----------------------\n",
       "Paramètres : {'contamination': 0.01, 'n_neighbors': 3}\n",
-      "Précision : 65.24%\n",
+      "Précision : 100.00%\n",
       "Recall : 3.17%\n",
       "F1 score : 0.06\n",
       "----------------------\n",
       "Paramètres : {'contamination': 0.01, 'n_neighbors': 5}\n",
-      "Précision : 63.53%\n",
+      "Précision : 25.00%\n",
       "Recall : 0.79%\n",
       "F1 score : 0.02\n",
       "----------------------\n",
       "Paramètres : {'contamination': 0.01, 'n_neighbors': 10}\n",
-      "Précision : 63.53%\n",
+      "Précision : 25.00%\n",
       "Recall : 0.79%\n",
       "F1 score : 0.02\n",
       "----------------------\n",
       "Paramètres : {'contamination': 0.05, 'n_neighbors': 3}\n",
-      "Précision : 68.66%\n",
+      "Précision : 94.44%\n",
       "Recall : 13.49%\n",
       "F1 score : 0.24\n",
       "----------------------\n",
       "Paramètres : {'contamination': 0.05, 'n_neighbors': 5}\n",
-      "Précision : 62.68%\n",
+      "Précision : 35.29%\n",
       "Recall : 4.76%\n",
       "F1 score : 0.08\n",
       "----------------------\n",
       "Paramètres : {'contamination': 0.05, 'n_neighbors': 10}\n",
-      "Précision : 61.25%\n",
+      "Précision : 22.22%\n",
       "Recall : 3.17%\n",
       "F1 score : 0.06\n",
       "----------------------\n",
       "Paramètres : {'contamination': 0.1, 'n_neighbors': 3}\n",
-      "Précision : 68.38%\n",
+      "Précision : 71.43%\n",
       "Recall : 19.84%\n",
       "F1 score : 0.31\n",
       "----------------------\n",
       "Paramètres : {'contamination': 0.1, 'n_neighbors': 5}\n",
-      "Précision : 62.11%\n",
+      "Précision : 40.00%\n",
       "Recall : 11.11%\n",
       "F1 score : 0.17\n",
       "----------------------\n",
       "Paramètres : {'contamination': 0.1, 'n_neighbors': 10}\n",
-      "Précision : 62.68%\n",
+      "Précision : 42.86%\n",
       "Recall : 11.90%\n",
       "F1 score : 0.19\n",
       "----------------------\n",
@@ -351,6 +338,11 @@
    "id": "2aad6da9-8894-4b3f-a1e0-d2757976b0b2",
    "metadata": {},
    "source": [
+    "# Explication des données\n",
+    "- Le dataset ALOI contient des images d'objets sous différents conditions lumineuses\n",
+    "- Le dataset Glass contient les données de composition de verres ainsi que l'indice de réfraction\n",
+    "- Le dataset Ionos contient des données radars passant par la ionosphere\n",
+    "\n",
     "# aloi\n",
     "Meilleurs paramètres:\n",
     "- {'contamination': 0.05, 'n_neighbors': 5}\n",
